<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:chainUseRtl="false"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/input"
        android:textAlignment="textEnd"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    android:layout_marginTop="50dp"-->
<!--    android:layout_marginEnd="10dp"-->
<!--    android:layout_marginStart="10dp"-->
<!--    android:layout_marginBottom="10dp"-->

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expression" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/numbersBtnContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@+id/btn4"
            app:layout_constraintEnd_toStartOf="@+id/btn8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@+id/btn5"
            app:layout_constraintEnd_toStartOf="@+id/btn9"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_9"
            app:layout_constraintBottom_toTopOf="@+id/btn6"
            app:layout_constraintEnd_toStartOf="@+id/btnDivide"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/divide"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textColor="#3949AB"
            app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn9"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Row 2 -->
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@+id/btn1"
            app:layout_constraintEnd_toStartOf="@+id/btn5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@+id/btn2"
            app:layout_constraintEnd_toStartOf="@+id/btn6"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn8" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_6"
            app:layout_constraintBottom_toTopOf="@+id/btn3"
            app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn9" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/multiply"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textColor="#3949AB"
            app:layout_constraintBottom_toTopOf="@+id/btnSubtract"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@+id/btnC"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@+id/btn0"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_3"
            app:layout_constraintBottom_toTopOf="@+id/btnDot"
            app:layout_constraintEnd_toStartOf="@+id/btnSubtract"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toBottomOf="@+id/btn6" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/substract"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textColor="#3949AB"
            app:layout_constraintBottom_toTopOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/clear"
            android:backgroundTint="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintStart_toEndOf="@+id/btnC"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAdd"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/add"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textColor="#3949AB"
            app:layout_constraintBottom_toTopOf="@+id/btnEqual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toBottomOf="@+id/btnSubtract" />

        <!-- Equal button (Row 5) -->
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/equal"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textColor="#3949AB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>